--- a/stridle/src/main/res/values/strings.xml
+++ b/stridle/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Stridle</string>
+    <string name="Stridle">Stridle</string>
     <string name="points"></string>
     <string name="title_activity_settings">Settings</string>
 
